Thu Sep 13 18:50:00 EEST 2007 Pekka Riikonen <priikone@silcnet.org>

	* Fixed prerequisite version checking to work on all shells.

	* Fixed parameter shifting on some shells when no arguments
	  are given to autodist.

	* Added support for source file distdef processing for the
	  following files: .mm .M .S

Thu May 31 23:34:00 EEST 2007 Pekka Riikonen <priikone@silcnet.org>

	* Autodist 1.3.2.

	* Added 'prereq' directive to support encforcment of Autodist
	  version.

	* Added support for providing extra parameters to autodist that
	  are passed to the hook scripts.  User can specify whatever
	  extra parameter they want.

Wed Feb 21 15:45:50 EET 2007 Pekka Riikonen <priikone@silcnet.org>

	* Autodist 1.3.1.

Sat Jun 24 23:38:24 EEST 2006 Pekka Riikonen <priikone@silcnet.org>

	* Match distdef names exactly (/^foo$/ instead of /^foo/).

Wed May  4 10:58:24 EEST 2005 Pekka Riikonen <priikone@silcnet.org>

	* Autodist 1.3.

Sun May  1 17:31:55 EEST 2005 Pekka Riikonen <priikone@silcnet.org>

	* Added support for dependencies in makefiles.

	* Added AD_DISABLE_DEPENDENCIES macro to disable Autodist
	  dependencies in makefiles.  Added support for dependencies
	  in makefiles.

	* Added -p option to Autodist.  It can be used to a process file
	  from the command line.

	* Added dependency support for configure.ad files as well.

Sat Apr 30 17:49:05 EEST 2005 Pekka Riikonen <priikone@silcnet.org>

	* The 'noprocess' directive now works recursively with
	  directories.

Sat Apr 30 11:49:01 EEST 2005 Pekka Riikonen <priikone@silcnet.org>

	* Added better debug messages.

	* Added log file creation, autodist.log and makedist.log.

	* Fixed license-header to change license only during packaging,
	  not also during preparation.

	* Fixed .ad processing when the file was not processed, to
	  copy the original to new name.

	* Fixed 'include' when copying directories to root of the
	  distdir, and the destination directory already exist.
