@@ -1,3 +1,9 @@
+Wed Jan 16 17:17:41 EET 2008 Pekka Riikonen <priikone@silcnet.org>
+
+	* Fixed *.ad (excluding configure.ad and Makefile.ad files)
+	  processing to correctly remove trailing backslashes and
+	  copy the processed file to new name.
+
 Thu Sep 13 18:50:00 EEST 2007 Pekka Riikonen <priikone@silcnet.org>
 
 	* Fixed prerequisite version checking to work on all shells.
